src/components/create-post/create-post.styles.scss
.AddPost {
  width: 30%;
  padding: 10px;
  height: fit-content;
  border: 1px solid rgb(235, 237, 240);
  background-color: white;
  margin-top: 4rem;

  .SubmitButton {
    border: 1px solid #818e99;
    background-color: white;
  }
  .SubmitButton:hover {
    border: 1px solid #818e99;
    background-color: #818e99;
    color: white;
    cursor: pointer;
  }
  .CreatePostInput {
    border: 1px solid #818e99;
  }
}

.CreatePostTitle {
  margin: 10px 0;
  label {
    display: block;
  }
  .UserName {
    color: #818e99;
    font-weight: bold;
  }
}

.CreatePostText {
  textarea {
    height: 100px;
    width: 100%;
    border: 1px solid #818e99;
  }
}

@media (max-width: 40rem) {
  .AddPost {
    position: fixed;
    z-index: 10;
    height: 0;
    overflow: hidden;
    top: 30%;
    width: 95%;
    padding: 0;
    margin: auto;
    left: 0;
    right: 0;
    transform: translateX(-100%);
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
  }
  .AddPost.IsActive {
    transform: translateX(0);
    height: auto;
  }
}

